# opm-source-toolbox

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: fetch_atlas.md  generic_sensor_to_roi_workflow.md  opm_to_surface_timeseries_tutorial.ipynb  public_api.md  pypi_release.md  release_checklist.md  render_alignment_qc.md  render_roi_vector_on_surface.md  repo_cut_checklist.md
scripts/: export_repo_candidate.sh
src/opm_source_toolbox/: __init__.py  alignment_qc.py  atlas_fetch.py  core.py  legacy_exports.py  roi_surface_render.py  sensor_to_roi.py  workflow.py
src/opm_source_toolbox/cli/: __init__.py  export_sensor_data_to_source_rois.py  fetch_atlas.py  render_alignment_qc.py  render_roi_vector_on_surface.py
tests/: test_opm_source_toolbox.py
