[project]
name = "opm-source-roi"
version = "0.1.0"
description = "Manifest-driven OPM/MEG source ROI export and surface rendering"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["meg", "opm", "mne", "source-imaging", "roi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.5",
    "scipy>=1.8",
    "mne>=1.0",
    "nibabel>=5.3",
]

[project.urls]
Homepage = "https://github.com/wadelab/opm-source-toolbox"
Repository = "https://github.com/wadelab/opm-source-toolbox"
Issues = "https://github.com/wadelab/opm-source-toolbox/issues"

[project.optional-dependencies]
surface = [
    "matplotlib>=3.5",
    "nilearn>=0.12.1",
]
alignment-qc = [
    "pillow>=10.0",
    "pyvista>=0.46.5",
]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.5",
    "nilearn>=0.12.1",
    "pillow>=10.0",
    "pyvista>=0.46.5",
]

[project.scripts]
opm-source-fetch-atlas = "opm_source_toolbox.cli.fetch_atlas:main"
opm-source-manifest-export = "opm_source_toolbox.cli.export_sensor_data_to_source_rois:main"
opm-source-alignment-qc = "opm_source_toolbox.cli.render_alignment_qc:main"
opm-source-surface-vector = "opm_source_toolbox.cli.render_roi_vector_on_surface:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opm_source_toolbox"]
artifacts = [
    "src/opm_source_toolbox/schaefer/*.annot",
]

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "pyproject.toml",
    "docs/**/*.md",
    "src/opm_source_toolbox/**/*.py",
    "src/opm_source_toolbox/schaefer/*.annot",
    "tests/test_opm_source_toolbox.py",
]
